# 2H_TaSe2_Tc_STM

./: .cursorignore  .cursorrules  .gitignore  2HTaSe2_ap_118K002_cln.npy  B02_fft_autocorr.ipynb  B03_visualizePhaseMap copy.ipynb  C01_iccdw_transition_toon.ipynb  C03_fake_STM_img_generator.ipynb  C05_Fig_printout.ipynb  C06_schematic_generator_fig4.ipynb  D01_DWN4pub_initial.ipynb  D02_CDW_toon.ipynb  D02a_CDW_toon.ipynb  D03_CDW_toon2.ipynb  D04_vortex_toon.ipynb  D05_Heisenberg.ipynb  D06_CDW_HCA_diagram.ipynb  E02_3x3x3.ipynb  E03_supp1Figs.ipynb  E04_forPhaseMap.ipynb  E05_voronoi.ipynb  E06_boundary_examples.ipynb  E07_emergent_correction.ipynb  Figs_draft_version_convention.md  Heisenberg.ipynb  Lawler_Fujita(118K_40nm).ipynb  Lawler_Fujita(118K_40nm)_testVScodeMigration.ipynb  Lawler_Fujita(78K_160nm).ipynb  My_Paper_Report.pptx  PYMAIA6_day1_선형회귀,로지스틱회귀_ipynb의_사본.ipynb  PYMAIA6_day1_파이썬_실습.ipynb  PYMAIA6_day3_CNN_실습.ipynb  PYMAIA6_day3_CNN_실습2.ipynb  Phasemap_convention.ipynb  README.md  README_phsemapWorkflow.md  Report_solLatt.pptx  Test_read_gwyd.ipynb  Timeline.md  Z3Z3.md  (+41 more)
affineBases-master/: grid2dExample.mlx
affineBases-master/resources/project/qaw0eS1zuuY1ar9TdPn1GMfrjbQ/: vXZEY_EZA71jP4MWkWA__oW5ns0p.xml
assets/: ccdw_dot.pngcrop  clongcdw_dot.pngcrop  iccdw_dot.pngcrop  trans_cong2ccdw_dot.pngcrop
crypy_examples/: __init__.py  atom_network.py  cdw_collection.py  chiral_interlock.py  clr_hexagon.py  colorspace.py  directionalDW.py  dwn_toon.py  eda4dw.ipynb  iccdw_cartoon.py  iccdw_cartoon_v2.py  pts_on_poly.py  test_import.py  testesteimport.py  tripleQ_dwn.py
crypy_examples/plot/: domain.py  dw.py  dw3.py  hex_dwn.py  iccdw_dot.py  iccdw_kmap.py  lattice.py  lattice9.py  pipe_cdw.py  scatter_gif.py  solLatt_shiftmap.py  tinker.py  vortices.py
dev_tools/: refactor_notebook.py  test_import.py  test_notebook.py
docs/: Figs_draft_version_convention.md  HC_notation.md  README().md  TODO.md  Timeline.md  commutator.md  convention_of_phi_and_basis.md  overallprocess.md
docs/ICCDW_transition/: index.md
docs/Results/: index.md
figpub/: figpub_all.py  figsets.py
figpub/combined/: layout.py
figpub/iccdw/: layout.py
figpub/solLatt/: layout.py
imagingPhase/: README.md  __init__.py  ffts.py  get_phimap.py  load_data.py  remove_background.py  surgery.py  visPhase.py
legacy/: experimentalData.m  fileMigration.m
pipe/: loadHeaderTbls.py
topological_encoding/: EDA.ipynb  dirDW.py  extract_dwv.py  segmentation.py
