[project]
name = "2h-tase2-tc-stm"
version = "0.1.0"
description = "STM study on 2H-TaSe2 CDW/Tc project"
authors = [
    {name = "Hae Ryoung Park"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12" # 본인의 실제 파이썬 버전에 맞게 수정하셔도 됩니다 (예: >=3.11)

dependencies = [
    "asttokens (==3.0.0)",
    "attrs (==25.3.0)",
    "beautifulsoup4 (==4.13.5)",
    "colorama (==0.4.6)",
    "comm (==0.2.3)",
    "contourpy (==1.3.3)",
    "cycler (==0.12.1)",
    "debugpy (==1.8.16)",
    "decorator (==5.2.1)",
    "et-xmlfile (==2.0.0)",
    "executing (==2.2.1)",
    "fastjsonschema (==2.21.2)",
    "fonttools (==4.59.2)",
    "google (==3.0.0)",
    "gwyfile (==0.2.0)",
    "imageio (==2.37.0)",
    "ipykernel (==6.30.1)",
    "ipython (==9.5.0)",
    "ipython-pygments-lexers (==1.1.1)",
    "jedi (==0.19.2)",
    "jsonschema (==4.25.1)",
    "jsonschema-specifications (==2025.9.1)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.8.1)",
    "jupyterlab-widgets (==3.0.15)",
    "kiwisolver (==1.4.9)",
    "lazy-loader (==0.4)",
    "lxml (==6.0.2)",
    "matplotlib (==3.10.6)",
    "matplotlib-inline (==0.1.7)",
    "mpltern (==1.0.4)",
    "mpmath (==1.3.0)",
    "narwhals (==2.5.0)",
    "nbformat (==5.10.4)",
    "nest-asyncio (==1.6.0)",
    "networkx (==3.5)",
    "numpy (==2.0.2)",
    "opencv-python (==4.12.0.88)",
    "openpyxl (==3.1.5)",
    "packaging (==25.0)",
    "pandas (==2.3.2)",
    "parso (==0.8.5)",
    "pillow (==11.3.0)",
    "platformdirs (==4.4.0)",
    "plotly (==6.3.0)",
    "prompt-toolkit (==3.0.52)",
    "psutil (==7.0.0)",
    "pure-eval (==0.2.3)",
    "pygments (==2.19.2)",
    "pyparsing (==3.2.3)",
    "pyqt5-qt5 (==5.15.2)",
    "pyqt5-sip (==12.17.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-pptx (==1.0.2)",
    "pytz (==2025.2)",
    "pywin32 (==311)",
    "pyzmq (==27.0.2)",
    "referencing (==0.36.2)",
    "rpds-py (==0.27.1)",
    "scikit-image (==0.25.2)",
    "scipy (==1.16.1)",
    "shapely (==2.1.2)",
    "six (==1.17.0)",
    "soupsieve (==2.8)",
    "stack-data (==0.6.3)",
    "sympy (==1.14.0)",
    "tifffile (==2025.8.28)",
    "toolz (==1.1.0)",
    "tornado (==6.5.2)",
    "traitlets (==5.14.3)",
    "typing-extensions (==4.15.0)",
    "tzdata (==2025.2)",
    "wcwidth (==0.2.13)",
    "widgetsnbextension (==4.0.14)",
    "xlsxwriter (==3.2.9)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"